Fix menu item spacing on focus.

--- a/src/scss/templates/_region--header-menu.scss
+++ b/src/scss/templates/_region--header-menu.scss
@@ -174,7 +174,7 @@
         > ul > li {
           padding-right: 2em;
           a {
-            padding: 1em .5em 1em 1em;
+            padding: 1em .5em 1em .5em;
           }
         }
         button.header-menu-toggle {
